--- a/hr-backend/package.json
+++ b/hr-backend/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "middleware": "nodemon server.js"
+    "middleware": "babel-node ./server.js"
   },
   "dependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.15",
     "mongoose": "^6.2.10",
     "express": "^4.17.3",
