--- a/hr-backend/package.json
+++ b/hr-backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.3",
     "body-parser": "^1.20.0",
     "morgan": "^1.10.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "socket.io": "2.4.1"
   },
   "keywords": [],
   "author": "",
